# cosmic-launcher

./: BUILD_MUSL.md  Cargo.toml  Cargo.toml.bak  TASK_SWITCHER_REDESIGN.md  temp_app_clean.rs
.cargo/: config.toml
src/: app.rs  cosmic_toplevel_protocol.rs  cosmic_window_info.rs  cosmic_workspace_capture.rs  main.rs  portal_screenshot.rs  screenshot.rs  wayland_screenshot.rs  wayland_subscription.rs  wayshot_screenshot.rs  xcap_screenshot.rs
src/app_list/: mod.rs
src/backend/: mod.rs
src/backend/wayland/: buffer.rs  dmabuf.rs  mod.rs  screencopy.rs  toplevel.rs  workspace.rs
src/components/: list.rs  mod.rs  preview_grid.rs
src/subscriptions/: backend.rs  launcher.rs  mod.rs
