[package]
name = "cosmic-launcher"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2024"

[features]
default = []
wgpu = ["libcosmic/wgpu"]
console = ["tokio/tracing"]
mock-backend = []
a11y = []
no-subsurfaces = []
force-shm-screencopy = []

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
calloop = "0.13"
calloop-wayland-source = "0.3"
console-subscriber = "0.1"
freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }
futures = "0.3"
futures-channel = "0.3"
futures-executor = "0.3"
gbm = "0.12"
i18n-embed = { version = "0.15.3", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.3"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
    "autosize",
    "winit",
    "multi-window",
    "wayland",
    "tokio",
    "single-instance",
    "desktop-systemd-scope",
    "xdg-portal",
] }
log = "0.4"
memmap2 = "0.9"
rustix = { version = "0.38", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "env-filter"] }
tracing-journald = "0.3"
tokio = { version = "1.0", features = ["sync", "rt"] }
tokio-stream = "0.1"
nix = { version = "0.29", features = ["process"] }
once_cell = "1.20"
pop-launcher = { git = "https://github.com/pop-os/launcher/" }
pop-launcher-service = { git = "https://github.com/pop-os/launcher/" }
pretty_env_logger = "0.5"
rust-embed = "8.5"
zbus = "5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
unicode-truncate = "0.2"
unicode-width = "0.1"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-misc = "0.2"
xdg = "2.5"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols" }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }

